docker/flask-python3/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tocochan
spec:
  containers:
    - image: gcr.io/mametsubuservice-175801/tocochan:v0.0.2
      imagePullPolicy: Always
      name: tocochan
